# llmswap

./: .env.example  .gitignore  .mailmap  ANDREJ_KARPATHY.md  CHANGELOG.md  CLAUDE.md  COMPATIBILITY-RULES.md  CONTRIBUTORS.md  LICENSE  MANIFEST.in  README.md  enterprise_evaluation.py  evaluation_report.json  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  comprehensive-ci.yml  pr-checks.yml  release.yml  tests.yml
.test-venv/: pyvenv.cfg
Formula/: llmswap.rb
any_llm/: __init__.py  client.py  exceptions.py  providers.py  response.py
examples/: 01_weather_api.py  02_database_query.py  03_ecommerce_assistant.py  README.md  ask  basic_usage.py  cli_assistant.py  cli_usage_guide.md  code_reviewer.py  debug_helper.py  enterprise_contract_analyzer.py  enterprise_support_triage.py  gemini_3_multimodal.py  hackathon_starter.py  latest_models_feb_2026.py  latest_models_may_2026.py  latest_models_nov_2025.py  log_analyzer.py  models.json.example  pdf_qa_basic.py  pdf_revenue_comparison.py  provider_comparison.py  quick_chat.py  smart_cost_optimizer.py  test_caching.py  test_caching_local.py
examples/advanced/: error_handling.py
examples/basic/: provider_switching.py  simple_query.py  streaming.py
homebrew-tap-files/: .gitignore  README.md
homebrew-tap-files/.github/workflows/: test.yml
homebrew-tap-files/Formula/: llmswap.rb
llmswap/: __init__.py  __main__.py  app.py  async_client.py  async_providers.py  cache.py  cli.py  cli_workspace.py  client.py  config.py  exceptions.py  logging_handler.py  provider_registry.py  providers.py  response.py  security.py  verification.py
llmswap/analytics/: __init__.py  price_manager.py  usage_tracker.py
llmswap/cli/: __init__.py  mcp_cli.py  ui.py  ui_old_backup.py  ui_simple_clean.py
llmswap/eklavya/: __init__.py  age_adapter.py  mentor.py  personas.py  practical_personas.py  workspace_mentor.py
llmswap/mcp/: __init__.py  circuit_breaker.py  client.py  connection_pool.py  exceptions.py  protocol.py
llmswap/mcp/transports/: __init__.py  base.py  http.py  sse.py  stdio.py
llmswap/metrics/: __init__.py  cost_estimator.py
llmswap/personalization/: __init__.py  alias_manager.py  prompt_templates.py
llmswap/tools/: __init__.py  response.py  schema.py
llmswap/web/: __init__.py  app.py  comparison.py  models.py  workspace_integration.py
llmswap/web/templates/: index.html
llmswap/workspace/: __init__.py  detector.py  learnings_tracker.py  manager.py  registry.py  templates.py
tests/: __init__.py  conftest.py  test_async_basic.py  test_backward_compatibility.py  test_client.py  test_provider_registry.py  test_providers.py  test_web.py
