[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "llmswap"
version = "1.4.0"
description = "Universal Python SDK for seamless LLM provider switching - OpenAI, Anthropic Claude, Google Gemini, Ollama. Zero-config multi-provider LLM library with automatic fallback."
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
authors = [
    {name = "Sreenath Menon", email = "zreenathmenon@gmail.com"},
]
keywords = ["llm", "ai", "anthropic", "openai", "gemini", "ollama", "chatbot", "gpt", "claude", "llm-api", "multi-llm", "llm-provider", "llm-client", "llm-wrapper", "llm-sdk", "gpt-4", "gpt-3.5", "claude-3", "gemini-pro", "langchain-alternative", "llm-abstraction", "ai-sdk", "llm-interface", "provider-switching", "llm-fallback", "unified-llm", "llm-gateway", "ai-gateway", "llm-router", "api-wrapper"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]
dependencies = [
    "anthropic>=0.3.0",
    "openai>=1.0.0",
    "google-generativeai>=0.3.0",
    "requests>=2.25.0",
    "python-dotenv>=0.19.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "isort>=5.10.0",
    "mypy>=0.991",
]

[project.urls]
Homepage = "https://github.com/sreenathmmenon/llmswap"
Documentation = "https://github.com/sreenathmmenon/llmswap#readme"
Repository = "https://github.com/sreenathmmenon/llmswap"
Issues = "https://github.com/sreenathmmenon/llmswap/issues"
Changelog = "https://github.com/sreenathmmenon/llmswap/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["llmswap"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]